--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "node scripts/seedToDb.js",
-    "start:express": "node -r ts-node/register server/index.js"
+  "seed": "node scripts/seedToDb.js",
+  "start:express": "node -r ts-node/register server/index.js",
+  "test": "jest",
+  "test:ci": "jest --runInBand --reporters=default"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -34,6 +36,11 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@types/jest": "^29.5.4",
+    
+    "jest": "^29.6.1",
+    
+    "ts-jest": "^29.1.0"
   }
 }
